--- a/RNLI/app/src/main/res/layout/content_main.xml
+++ b/RNLI/app/src/main/res/layout/content_main.xml
@@ -14,6 +14,7 @@
     tools:showIn="@layout/activity_main">
 
     <TextView
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="RNLI Lifesaver"
@@ -25,6 +26,7 @@
         android:layout_marginTop="11dp" />
 
     <Button
+        android:id="@+id/button"
         android:layout_width="match_parent"
         android:text="SOS"
         android:textSize="50sp"
@@ -39,6 +41,4 @@
         android:layout_column="0"
         android:layout_height="wrap_content"
         android:padding="0dp" />
-
-
 </GridLayout>
