Centered RNLI Text and moved SOS button to top

--- a/RNLI/app/src/main/res/layout/content_main.xml
+++ b/RNLI/app/src/main/res/layout/content_main.xml
@@ -13,18 +13,6 @@
     tools:context="com.example.mariaberggren.rnli.MainActivity"
     tools:showIn="@layout/activity_main">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="RNLI Lifesaver"
-        android:textSize="25sp"
-        android:textStyle="bold"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="11dp" />
-
     <Button
         android:id="@+id/button"
         android:layout_width="match_parent"
@@ -37,8 +25,20 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_row="1"
+        android:layout_row="0"
         android:layout_column="0"
         android:layout_height="wrap_content"
         android:padding="0dp" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_column="0"
+        android:layout_row="1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="RNLI Lifesaver"
+        android:textSize="25dp"
+        android:textStyle="bold"
+        android:layout_marginTop="12dp"
+        android:textAlignment="center" />
 </GridLayout>
