--- a/RNLI/app/src/main/res/layout/content_main.xml
+++ b/RNLI/app/src/main/res/layout/content_main.xml
@@ -15,7 +15,8 @@
     android:layout_marginRight="2dp"
     android:columnCount="20"
     android:columnOrderPreserved="false"
-    android:layout_centerVertical="true">
+    android:layout_centerVertical="true"
+    android:layout_marginLeft="2dp">
 
     <Button
         android:id="@+id/button"
@@ -24,11 +25,6 @@
         android:textSize="50sp"
         android:textStyle="bold"
         android:layout_marginTop="0dp"
-        android:layout_below="@+id/textView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
         android:layout_row="0"
         android:layout_column="0"
         android:layout_height="wrap_content"
@@ -41,7 +37,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="RNLI Lifesaver"
-        android:textSize="25dp"
+        android:textSize="25sp"
         android:textStyle="bold"
         android:layout_marginTop="12dp"
         android:textAlignment="center"
