Fix buttons layout with gps

--- a/RNLI/app/src/main/res/layout/buttons_main.xml
+++ b/RNLI/app/src/main/res/layout/buttons_main.xml
@@ -59,6 +59,7 @@
         android:id="@+id/textView"
         android:layout_column="0"
         android:layout_width="wrap_content"
+        android:layout_columnSpan="2"
         android:layout_height="wrap_content"
         android:text="RNLI Lifesaver"
         android:textSize="25sp"
