--- a/RNLI/app/src/main/res/layout/buttons_main.xml
+++ b/RNLI/app/src/main/res/layout/buttons_main.xml
@@ -67,4 +67,11 @@
         android:layout_marginTop="12dp"
         android:textAlignment="center"
         android:layout_gravity="center_horizontal" />
+
+    <TextView
+        android:id="@+id/distressType"
+        android:layout_columnSpan="2"
+        android:layout_gravity="center"
+        android:layout_width="wrap_content"
+        android:textSize="18sp"/>
 </GridLayout>
