--- a/RNLI/app/src/main/res/layout/activity_main.xml
+++ b/RNLI/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_main" />
+    <include layout="@layout/buttons_main" />
 
 
 </android.support.design.widget.CoordinatorLayout>
